# python-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  rulesync.jsonc  template.md  template.toml
.github/workflows/: ci.yml
.rulesync/rules/: overview.md
hooks/: bootstrap.sh
python_template/: cli.py
tests/: test_utils.py
{{ project_name $$ snake_case }}/: cli.py  utils.py
{{ project_name }}/: cli.py  utils.py
