[project]
name = "{{ project_name }}"
version = "0.3.0"
description = "{{ project_description }}"
readme = "README.md"
requires-python = ">={{ python_version }}"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "deptry>=0.24.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]


[tool.ruff]
line-length = 120
exclude = ["pyproject.toml"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "C901",   # mccabe complexity
    "N",      # pep8-naming
    "RET",    # flake8-return
    "TRY",    # tryceratops (exception handling)
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
    "ERA",    # eradicate (commented-out code)
    "T20",    # flake8-print
    "PLR",    # pylint refactor
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50

[tool.mypy]
python_version = "{{ python_version }}"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{ project_name | snake_case }}"]

[project.scripts]
test-cli = "{{ project_name | snake_case }}.cli:main"
